--- a/app/assets/stylesheets/screen/web_style.css
+++ b/app/assets/stylesheets/screen/web_style.css
@@ -657,6 +657,17 @@ padding-bottom: 2em;
   border-bottom: 1px solid #ff9197;
   }
 
+.location {
+  display: block;
+  clear: both;
+  margin: 4em 0 0 0.25em;
+  padding: 0.25em 0.5em;
+  font-style: italic;
+  font-weight: bold;
+  border: 1px solid #999;
+  border-radius: 5px;
+  }
+
 .photo_viewer {
   float: left;
   width: 840px;
@@ -691,7 +702,8 @@ padding-bottom: 2em;
   }
 
 .calendar-ii {
-  float: left;width: 40px;
+  float: left;
+  width: 40px;
   height: 40px;
   margin: 0 0.25em;
   border: 1px solid #333;
