--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -190,7 +190,7 @@
 <% end %>
 <% else %>
    <div class="calendar_row" style="width: 90%; padding-top: 0.25em">
-     <div class="cell" style="width: 25%;">&nbsp;</div>
+     <div class="cell" style="width: 25%; height: 2.5em;">&nbsp;</div>
        No scheduled maintenance events at this time. Winter maintenance starting daily ~9:00 am.
    </div>
 <% end %>
