added formatting to attendances view

--- a/app/views/event_signups/index.html.erb
+++ b/app/views/event_signups/index.html.erb
@@ -10,7 +10,7 @@
 
 <h1>Airshow Signups</h1>
 
-<table width="550" class="table_border">
+<table class="table_border">
   <tr>
     <th>Member</th>
     <th>Signup Date</th>
