--- a/app/views/pages/admin_home.html.erb
+++ b/app/views/pages/admin_home.html.erb
@@ -38,6 +38,10 @@
     Edit/Admin Upcoming Airshow sign up lists
   </div>
   <div class="cell" style="width: 30%;">
+    <%= button_to "Event RSVPs", attendances_path, :method => :get %>
+    Edit/Admin Upcoming event RSVP lists
+  </div>
+  <div class="cell" style="width: 30%;">
     <%= button_to "Ride Requests", ride_requests_path, :method => :get %>
     List of signups for LFHE Rides
   </div>
