--- a/app/views/pages/SN_44_86758.html.erb
+++ b/app/views/pages/SN_44_86758.html.erb
@@ -1,8 +1,8 @@
-<h1>Devil Dog Airframe History</h1>
+_ <h1>Devil Dog Airframe History</h1>
 
 <p>The Devil Dog is a B-25J-30-NC. The Serial Number is 44-86758. She was built in Fairfax - Kansas City, Kansas in early 1945.</p>
 
-<p>Here is a brief history of the air frame put together with the help of B-25 History site <a href="http://b-25history.org/aircraft/4486758.htm">http://b-25history.org/aircraft/4486758.htm</a>.</p>
+<p>Here is a brief history of the airframe put together with the help of B-25 History site <a href="http://b-25history.org/aircraft/4486758.htm">http://b-25history.org/aircraft/4486758.htm</a>.</p>
  
 <table class="table_border">
   <tr>
@@ -12,8 +12,8 @@
   <tr>
     <td>Jun&nbsp;1945</td>
     <td>was delivered placed into storage at Independence, Missouri
-    <%= image_tag "/assets/photos/vintage/d_day_panel.jpg" %><br />
-    Panel stamped with June 6, 1944 - D-Day!</td>
+    <div style="text-align:center;"><%= image_tag "/assets/photos/vintage/d_day_panel.jpg", :border => "1px" %></div>
+    <div class="caption_text">Panel stamped with June 6, 1944 - the actual D-Day!</div></td>
   </tr>
   <tr>
     <td>Sep&nbsp;1945</td>
@@ -37,12 +37,14 @@
   </tr>
   <tr>
     <td>1965</td>
-    <td><%= image_tag "/assets/photos/vintage/devildog_in_belize_1965.jpg", :width => "450px" %></td>
+    <td><%= image_tag "/assets/photos/vintage/devildog_in_belize_1965.jpg", :width => "450px", :border => "1px"  %><br />
+    <div class="caption_text">Devil Dog in Belize 1965</div></td>
   </tr>
   <tr>
     <td>Feb&nbsp;1976</td>
     <td>she was again sold to W. A. Wooten and V. E. Thorpe of Harlingen, Texas, members of the CAF<br />
-    <%= image_tag "/assets/photos/vintage/rockdale_1980.jpg", :width => "450px" %></td>
+    <%= image_tag "/assets/photos/vintage/rockdale_1980.jpg", :width => "450px", :border => "1px"  %><br />
+    <div class="caption_text">Devil Dog is front-most plane, in Rockdale TX</div></td>
   </tr>
   <tr>
     <td>Fall&nbsp;1980</td>
@@ -87,7 +89,8 @@
   <tr>
     <td>2008</td>
     <td>structural pieces in the tail and left wing were replaced with new custom made pieces.
-    <%= image_tag "/assets/photos/080605_maint_update/maint_0806_4.jpg", :width => "450px" %></td>
+    <%= image_tag "/assets/photos/080605_maint_update/maint_0806_4.jpg", :width => "450px", :border => "1px"  %><br />
+    <div class="caption_text">New Wing Attach Point Installed</div></td>
   </tr>
   <tr>
     <td>Jul&nbsp;2009</td>
