updated terms index view to put office holders in rank order

--- a/app/views/pages/SN_44_86758.html.erb
+++ b/app/views/pages/SN_44_86758.html.erb
@@ -1,4 +1,4 @@
-_ <h1>Devil Dog Airframe History</h1>
+<h1>Devil Dog Airframe History</h1>
 
 <p>The Devil Dog is a B-25J-30-NC. The Serial Number is 44-86758. She was built in Fairfax - Kansas City, Kansas in early 1945.</p>
 
