--- a/app/views/layouts/hh.html.erb
+++ b/app/views/layouts/hh.html.erb
@@ -6,6 +6,7 @@
   <%= javascript_include_tag "application" %>
   <%= stylesheet_link_tag "application_print", :media => "print" %>
   <%= csrf_meta_tags %>
+  <%= favicon_link_tag 'favicon.ico' %>
 </head>
 <body id="hh">
 
