updated copy in airframe history

--- a/app/views/pages/SN_44_86758.html.erb
+++ b/app/views/pages/SN_44_86758.html.erb
@@ -44,7 +44,7 @@
     <td>Feb&nbsp;1976</td>
     <td>she was again sold to W. A. Wooten and V. E. Thorpe of Harlingen, Texas, members of the CAF<br />
     <%= image_tag "/assets/photos/vintage/rockdale_1980.jpg", :width => "450px", :border => "1px"  %><br />
-    <div class="caption_text">Devil Dog is front-most plane, in Rockdale TX</div></td>
+    <div class="caption_text">Devil Dog's Rockdale Flying Service siblings in Rockdale TX</div></td>
   </tr>
   <tr>
     <td>Fall&nbsp;1980</td>
