--- a/app/views/layouts/hh.html.erb
+++ b/app/views/layouts/hh.html.erb
@@ -6,7 +6,7 @@
   <%= javascript_include_tag "application" %>
   <%= stylesheet_link_tag "application_print", :media => "print" %>
   <%= csrf_meta_tags %>
-
+  <%= favicon_link_tag 'favicon.ico', :rel => 'apple-touch-icon', :type => 'image/png' %>
 </head>
 <body id="hh">
 
