--- a/app/views/layouts/map_layout.html.erb
+++ b/app/views/layouts/map_layout.html.erb
@@ -5,7 +5,8 @@
   <%= stylesheet_link_tag    "application" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
-  <%= favicon_link_tag 'favicon.ico', :rel => 'apple-touch-icon', :type => 'image/png' %>
+  <%= favicon_link_tag %>
+  <%= favicon_link_tag 'apple-icon-180x180.png', :rel => 'apple-touch-icon', :type => 'image/png' %>
 
     <script src="http://maps.google.com/maps?file=api&amp;v=2&amp;key=AIzaSyA2CUo-V9LEi2YuJvh6F_Sf7NkmpXnC4yE"
       type="text/javascript"></script>
