--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
   <%= stylesheet_link_tag    "application" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
+  <%= favicon_link_tag %>
   <%= favicon_link_tag 'favicon.ico', :rel => 'apple-touch-icon', :type => 'image/png' %>
 </head>
 <body>
