updated airframe copy

--- a/app/views/pages/SN_44_86758.html.erb
+++ b/app/views/pages/SN_44_86758.html.erb
@@ -17,19 +17,19 @@
   </tr>
   <tr>
     <td>Sep&nbsp;1945</td>
-    <td>she was moved to Pyote, Texas</td>
+    <td>she was moved to Pyote Army Air Field in Pyote, Texas southwest of Odessa. Pyote was transformed into an aircraft storage facility after the war. Enola Gay was stored there briefly in 1952.</td>
   </tr>
   <tr>
     <td>Jun&nbsp;1951</td>
-    <td>she was removed from storage in and modified by Hughes (TBM?) assignment was to James Connally Air Force Base, Texas</td>
+    <td>she was removed from storage and modified by Hughes (TBM?) and was assigned to James Connally Air Force Base, Waco, Texas (now KCNW).</td>
   </tr>
   <tr>
     <td>Dec&nbsp;1957</td>
-    <td>she was flown back to storage. </td>
+    <td>she was flown back (location is unspecified) to storage.</td>
   </tr>
   <tr>
     <td>Apr&nbsp;1958</td>
-    <td>she was sold to Arrow Sales of North Hollywood, California. Her registration was assigned as N9643C.</td>
+    <td>she was sold to Arrow Sales of North Hollywood, California. Her registration was assigned as N9643C. Arrow also purchased N9641C.</td>
   </tr>
   <tr>
     <td>Aug&nbsp;1958</td>
@@ -42,9 +42,9 @@
   </tr>
   <tr>
     <td>Feb&nbsp;1976</td>
-    <td>she was again sold to W. A. Wooten and V. E. Thorpe of Harlingen, Texas, members of the CAF<br />
+    <td>she was sold to W. A. Wooten and V. E. Thorpe of Harlingen, Texas, members of the CAF<br />
     <%= image_tag "/assets/photos/vintage/rockdale_1980.jpg", :width => "450px", :border => "1px"  %><br />
-    <div class="caption_text">Devil Dog's Rockdale Flying Service siblings in Rockdale TX</div></td>
+    <div class="caption_text">Devil Dog's Rockdale Flying Service siblings in Rockdale, TX - N9641C in foreground.</div></td>
   </tr>
   <tr>
     <td>Fall&nbsp;1980</td>
@@ -64,7 +64,7 @@
   </tr>
   <tr>
     <td>Jun&nbsp;1995</td>
-    <td>assigned to CAF sponsor group nased in Houston TX. She had not flown in over a year, was ferried to Ft Worth TX for repairs and appeared in Airsho '95.</td>
+    <td>assigned to CAF sponsor group based in Houston TX. She had not flown in over a year, was ferried to Ft Worth TX for repairs and appeared in Airsho '95.</td>
   </tr>
   <tr>
     <td>Mar&nbsp;1996</td>
