updating member forms

--- a/app/views/members/_form.html.erb
+++ b/app/views/members/_form.html.erb
@@ -91,6 +91,22 @@
 
 <div class="clearer"></div>
 
+<h3>Emergency Info</h3>
+<div class="indent_row">
+  <div class="cell field">
+    <%= f.label :ec_name, "Contact Name" %><br />
+    <%= f.text_field :ec_name, :size => '30' %>
+  </div>
+  <div class="cell field">
+    <%= f.label :ec_phone, "Phone" %><br />
+    <%= f.text_field :ec_phone, :size => '15' %>
+  </div>
+</div>
+  
+<div class="clearer"></div>
+
+<div class="clearer"></div>
+
 <h3>CAF Info</h3>
 <div class="indent_row">
   <div class="cell field">
