--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -1,3 +1,7 @@
+<% content_for :sidebar do %>
+  <%= render "sidebars/members" %>
+<% end %>
+
 <div class="form_row">
 
 <div class="form_cell" style="width: 200px;">
@@ -10,8 +14,7 @@
  <% end %>
 <br /><%= @member.city %>, <%= @member.state %> <%= @member.zip %>
 </p>
-</div>
-<div class="form_cell">
+
 <p>
   <% if @member.home_phone? %>
     <em>Home:</em> <%= @member.home_phone %><br />
@@ -24,6 +27,12 @@
   <% end %>
 </p>
 
+</div>
+<div class="form_cell">
+<p><strong>Emergency Contact:</strong><br />
+<%= @member.ec_name %><br />
+<%= @member.ec_phone %></p>
+
 <p>
   <em>Username:</em>
   <%= @member.user.username %>
@@ -31,11 +40,13 @@
   <em>CAF Col No:</em>
   <%= @member.caf_col_no %>
 <br />
-  <em>DDS last dues paid date:</em>
+  <em>DDS dues date:</em>
   <%= @member.dd_dues_date %>
 </p>
 </div>
 </div>
+
+
 
 <%= render 'versions', :member => @member %>
 
