--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,5 +1,5 @@
-
-    <script src="http://maps.google.com/maps?file=api&amp;v=2&amp;key=AIzaSyA2CUo-V9LEi2YuJvh6F_Sf7NkmpXnC4yE"
+<% email_addresses = "" %>
+<script src="http://maps.google.com/maps?file=api&amp;v=2&amp;key=AIzaSyA2CUo-V9LEi2YuJvh6F_Sf7NkmpXnC4yE"
       type="text/javascript"></script>
 
 <% map_url = "http://maps.googleapis.com/maps/api/staticmap?zoom=8&size=275x190&maptype=roadmap&markers=color:red%7Clabel:X%7C"+@event.location.latitude+","+@event.location.longitude+"&sensor=false" %>
@@ -211,8 +211,20 @@
     </td>
     <td><%= event_signup.created_at.strftime("%b %d, %Y %H:%M %p") %></td>
   </tr>
+  <% if email_addresses == "" %>
+    <% email_addresses = email_addresses + event_signup.member.user.email %>
+  <% else %>
+    <% email_addresses = email_addresses + "," + event_signup.member.user.email %>
+  <% end %>
 <% end %>
 </table>
+<% end %>
+<% end %>
+
+<% if signed_in?%>
+    <% if current_user.roles.any? {|role| role.name == "superuser" or role.name == "admin" } %>
+      <p><strong>Email list for admin:</strong></p>
+      <p><%= email_addresses %></p>
 <% end %>
 <% end %>
 
