--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,4 +1,8 @@
-<h1>Editing post</h1>
+<% content_for :sidebar do %>
+  <%= render "sidebars/markdown_cs" %>
+<% end %>
+
+<h1>Editing Post</h1>
 
 <%= render 'form' %>
 
