--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,4 +1,8 @@
-<h1>New post</h1>
+<% content_for :sidebar do %>
+  <%= render "sidebars/markdown_cs" %>
+<% end %>
+
+<h1>New Post</h1>
 
 <%= render 'form' %>
 
