--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,8 +1,8 @@
 
 
-<h1 class="post"><%= @post.title %></h1>
+<h1><%= @post.title %></h1>
 
-<p><%= @post.content %></p>
+<p><%= markdown @post.content %></p>
 
 <p>This entry was posted on <%= @post.created_at.strftime("%B %d, %Y") %> by <% if @post.user_id? %><%= @post.user.member.first_name %> <%= @post.user.member.last_name.first %><% end %>. It was filed under 
     <% @post.categories.each do |category| %>
@@ -10,6 +10,10 @@
     <%end %>
 </p>
 
+<% if signed_in?%>
+    <% if current_user.roles.any? {|role| role.name == "superuser" or role.name == "admin" } %>
+      <%= link_to 'Edit', edit_post_path(@post) %> |
+    <% end %>
+<% end %>
+<%= link_to 'Back to Bulletin Board', posts_path %>
 
-<%= link_to 'Edit', edit_post_path(@post) %> |
-<%= link_to 'Back', posts_path %>
