--- a/app/views/sidebars/_blog.html.erb
+++ b/app/views/sidebars/_blog.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Bulletin Board</h1>
 
-<p>The purpose of this Bulletin Board is to make information more transparent and available to the membership. Should you have any comments or input, please contact the Adjutant, Operations or Maintenance officer for additional information. The content of this board is administered by the Adjutant Officer who is the primary contact for postings and he is further backed up by Adam Pfaff.</p>
+<p>The purpose of this Bulletin Board is to make information more transparent and available to the membership. Should you have any comments or input, please contact the Adjutant, Operations or Maintenance officer for additional information. The content of this board is administered by the Adjutant Officer who is the primary contact for postings.</p>
 
 <!-- Close right-column-box -->
 </div>
