more updates to posts

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -11,6 +11,13 @@
     </div>
   <% end %>
 
+  <h3>Post Categories:</h3>
+  <div class="indent_row">
+    <%= f.fields_for :categories do |builder| %>
+      <%= render "categories", :f => builder %>
+    <% end %>
+  </div>
+<div class="clearer"></div>
   <div class="field">
     <%= f.label :title %><br />
     <%= f.text_field :title, :size => '50' %>
