added in safety notifier model

--- a/app/views/sidebars/_members.html.erb
+++ b/app/views/sidebars/_members.html.erb
@@ -10,5 +10,7 @@
   <li><%= link_to 'Password', edit_user_registration_path %></li>
 </ul>
 <p><%= link_to "Renew Membership Online", membership_path %></p>
+
+<p><strong><%= link_to 'Submit Safety Concern', new_safety_item_path %></strong></p>
 <!-- Close right-column-box -->
 </div>
