updates to safety items and permissions

--- a/app/views/layouts/homepage.html.erb
+++ b/app/views/layouts/homepage.html.erb
@@ -29,6 +29,9 @@
 
 <div id="main-area">
 
+<% if notice %>
+<p id="notice" style="padding-top: 6em; margin-left: 2em;"><%= notice %></p>
+<% end %>
 
 <%= yield %>
 
