--- a/app/views/safety_items/show.html.erb
+++ b/app/views/safety_items/show.html.erb
@@ -19,6 +19,7 @@
   <%= @safety_item.resolved %>
 </p>
 
-
-<%= link_to 'Edit', edit_safety_item_path(@safety_item) %> |
+<% if current_user.roles.any? {|role| role.name == "safety_officer" or role.name == "admin" } %>
+  <%= link_to 'Edit', edit_safety_item_path(@safety_item) %> | 
+<% end %>
 <%= link_to 'Back', safety_items_path %>
