added formatting to safety item link, added disable to all buttons after click

--- a/app/views/dues_payments/_form.html.erb
+++ b/app/views/dues_payments/_form.html.erb
@@ -50,6 +50,6 @@
   </div>
 <div class="clearer"></div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit :data => { :disable_with => "Submitting..." } %>
   </div>
 <% end %>
