--- a/app/views/grants/_form.html.erb
+++ b/app/views/grants/_form.html.erb
@@ -31,6 +31,6 @@
 <div class="clearer"></div>
 
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit :data => { :disable_with => "Submitting..." } %>
   </div>
 <% end %>
