--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -90,7 +90,7 @@
 <div class="form_row">
   <div class="form_cell">
     <div class="actions">
-      <%= f.submit %>
+      <%= f.submit :data => { :disable_with => "Submitting..." } %>
     </div>
   </div>
 </div>
