--- a/app/views/squadron_documents/_form.html.erb
+++ b/app/views/squadron_documents/_form.html.erb
@@ -34,6 +34,6 @@
     <%= f.date_select :doc_date %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit :data => { :disable_with => "Submitting..." } %>
   </div>
 <% end %>
