--- a/app/views/test_answers/_form.html.erb
+++ b/app/views/test_answers/_form.html.erb
@@ -28,6 +28,6 @@
     <%= f.check_box :correct %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit :data => { :disable_with => "Submitting..." } %>
   </div>
 <% end %>
