--- a/app/assets/stylesheets/screen/web_style.css
+++ b/app/assets/stylesheets/screen/web_style.css
@@ -866,12 +866,31 @@ input, textarea {
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   }
+
+input[type=submit] {
+  cursor: pointer;
+  }
+
 .styled-select {
   background: #e2ecee;
   border: 1px solid #ccc;
   font-size: 1.25em;
   padding: 0.1em 0.5em;
    }
+
+input.safety-button {
+  cursor: pointer;
+  margin: 1em 1.4em 2em;
+  font-family: Helvetica, Arial, sans-serif;
+  font-size: 1.25em;
+  padding: 0.25em 0.5em;
+  background: #ff0000;
+  color: #fff;
+  border: 1px solid #cc0000;
+  border-radius: 4px;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  }
 
 .form_note {
   color: #999;
