--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -20,6 +20,6 @@
     <%= f.text_field :description %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit :data => { :disable_with => "Submitting..." } %>
   </div>
 <% end %>
