--- a/app/views/event_signups/_form.html.erb
+++ b/app/views/event_signups/_form.html.erb
@@ -41,7 +41,7 @@
 <%= f.hidden_field :position, :value => 0 %>
 
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit :data => { :disable_with => "Submitting..." } %>
   </div>
 
 <% end %>
