--- a/app/views/knowledge_tests/_form.html.erb
+++ b/app/views/knowledge_tests/_form.html.erb
@@ -25,7 +25,7 @@
 <p><%= link_to_add_fields "Add Question", f, :test_questions %></p>
 
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit :data => { :disable_with => "Submitting..." } %>
   </div>
 
 <% end %>
