--- a/app/views/locations/_form.html.erb
+++ b/app/views/locations/_form.html.erb
@@ -64,6 +64,6 @@
 </div>
 <div class="clearer"></div>
   <div class="actions" style="text-align: center;">
-    <%= f.submit %>
+    <%= f.submit :data => { :disable_with => "Submitting..." } %>
   </div>
 <% end %>
