--- a/app/views/manifests/_form.html.erb
+++ b/app/views/manifests/_form.html.erb
@@ -35,6 +35,6 @@
 <% end %>
 </ul>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit :data => { :disable_with => "Submitting..." } %>
   </div>
 <% end %>
