--- a/app/views/officer_positions/_form.html.erb
+++ b/app/views/officer_positions/_form.html.erb
@@ -28,6 +28,6 @@
     <%= f.text_field :usual_term_start %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit :data => { :disable_with => "Submitting..." } %>
   </div>
 <% end %>
