--- a/app/views/product_photos/_form.html.erb
+++ b/app/views/product_photos/_form.html.erb
@@ -27,6 +27,6 @@
     <%= f.text_field :image_url %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit :data => { :disable_with => "Submitting..." } %>
   </div>
 <% end %>
