--- a/app/views/rights/_form.html.erb
+++ b/app/views/rights/_form.html.erb
@@ -29,6 +29,6 @@
 <div class="clearer"></div>
 
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit :data => { :disable_with => "Submitting..." } %>
   </div>
 <% end %>
