--- a/app/views/teasers/_form.html.erb
+++ b/app/views/teasers/_form.html.erb
@@ -16,6 +16,6 @@
     <%= f.text_area :content %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit :data => { :disable_with => "Submitting..." } %>
   </div>
 <% end %>
