--- a/app/views/terms/_form.html.erb
+++ b/app/views/terms/_form.html.erb
@@ -37,6 +37,6 @@
 </div>
 
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit :data => { :disable_with => "Submitting..." } %>
   </div>
 <% end %>
