--- a/app/views/trips/_form.html.erb
+++ b/app/views/trips/_form.html.erb
@@ -182,6 +182,6 @@
 <div class="clearer"></div>
 
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit :data => { :disable_with => "Submitting..." } %>
   </div>
 <% end %>
