--- a/app/views/users/_change_password_form.html.erb
+++ b/app/views/users/_change_password_form.html.erb
@@ -22,6 +22,6 @@
   </div>
 
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit :data => { :disable_with => "Submitting..." } %>
   </div>
 <% end %>
