--- a/app/views/videos/_form.html.erb
+++ b/app/views/videos/_form.html.erb
@@ -45,6 +45,6 @@
     <%= f.check_box :members_only %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit :data => { :disable_with => "Submitting..." } %>
   </div>
 <% end %>
