work on js distance calculator

--- a/app/views/locations/new.html.erb
+++ b/app/views/locations/new.html.erb
@@ -1,3 +1,18 @@
+<script>
+jQuery(function($){
+
+   $('#location_longitude').blur(function() {
+
+alert('OK');
+
+});
+
+});
+
+
+</script>
+
+
 <% content_for :sidebar do %>
   <div align="center">
   <%= link_to "AirNavLookup", "http://www.airnav.com/airports", :target => "_blank" %>
