removed flying sponser from renewal options

--- a/app/views/event_signups/frequent_flyers.html.erb
+++ b/app/views/event_signups/frequent_flyers.html.erb
@@ -6,7 +6,7 @@
 <table width="500" class="table_border">
 <tr>
   <th>Name</th>
-  <th>FF Miles</th>
+  <th>FF Miles (nm)</th>
 </tr>
 <% @ff.each do |ff| %>
 <tr class="<%= cycle('odd_row', 'even_row') %>">
