added functionality to send trip info notification

--- a/app/views/trips/_form.html.erb
+++ b/app/views/trips/_form.html.erb
@@ -180,6 +180,10 @@
 </div>
 
 <div class="clearer"></div>
+<hr />
+Click checkbox to send email notification to trip participants. <%= check_box_tag 'email_notice' %>
+<hr />
+<div class="clearer"></div>
 
   <div class="actions">
     <%= f.submit :data => { :disable_with => "Submitting..." } %>
