--- a/app/views/trips/new.html.erb
+++ b/app/views/trips/new.html.erb
@@ -1,3 +1,22 @@
+<script>
+jQuery(function($){
+
+//   $('#trip_crew_arrival').blur(function() {
+
+//   var $origDate = Date($('#trip_crew_arrival'));
+
+//  alert($origDate);
+  
+//   $('#trip_tug_time').val( Date($origDate.getTime() + 30*60000));
+
+//var newDateObj = new Date(oldDateObj.getTime() + diff*60000);
+//   $('#member_user_attributes_username').val($(this).val());
+});
+
+});
+</script>
+
+
 <% content_for :sidebar do %>
   <%= render "events/event_details" %>
 <% end %>
