--- a/app/views/ride_requests/_form.html.erb
+++ b/app/views/ride_requests/_form.html.erb
@@ -49,7 +49,7 @@
 * = required field
 <% if !@air_shows_public.blank? %>
 <div class="indent_row">
-  <p>Please indicate if you are available at one of the following airshows:</p>
+  <p>Please indicate if you are available at one of the following events:</p>
     <% @air_shows_public.each.each_with_index do |air_show, i| %>
     <% if i == 0 %>
       <div class="cell">
