--- a/app/views/ride_requests/_form.html.erb
+++ b/app/views/ride_requests/_form.html.erb
@@ -78,7 +78,7 @@
     <% end %>
   </div>
 <div class="clearer"></div>
-<p>If the air shows listed are not convenient for you - we will contact you when we plan an event near your city/state indicated above.</p>
+<p>If the events listed above are not convenient for you - we will contact you when we plan an event near your city/state indicated above.</p>
 </div>
 <% end %>
 
