finished JS calculate of airport distance on new location view

--- a/app/views/locations/new.html.erb
+++ b/app/views/locations/new.html.erb
@@ -1,16 +1,4 @@
-<script>
-jQuery(function($){
-
-   $('#location_longitude').blur(function() {
-
-alert('OK');
-
-});
-
-});
-
-
-</script>
+<%= render "distance_scripts" %>
 
 
 <% content_for :sidebar do %>
