updates to create new trip view

--- a/app/views/trips/_form.html.erb
+++ b/app/views/trips/_form.html.erb
@@ -85,7 +85,8 @@
 <% if !@event.nil? %>
   <%= f.hidden_field :event_id, :value => @event.id %>
 <% end %>
-
+<hr />
+<h2>Post Trip Info</h2>
 <div class="indent_row">
   <div class="cell field"> 
     <%= f.label :fuel_start %>:<br />
